--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
-      <img src="./images/image-qr-code.png" />
-      <div class="centered">
-        <h1 class="title">
-          Improve your front-end skills by building projects
-        </h1>
-        <p class="text">
-          Scan the QR code by visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div class="container">
+        <img src="./images/image-qr-code.png" alt="QRcode" />
+        <div class="centered">
+          <h1 class="title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="text">
+            Scan the QR code by visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
