--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <body>
     <main>
       <div class="container">
-        <img src="./images/image-qr-code.png" alt="QRcode" />
+        <img
+          src="./images/image-qr-code.png"
+          alt="QRcode to FrontEndMentor.io"
+        />
         <div class="centered">
           <h1 class="title">
             Improve your front-end skills by building projects
